--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-508.0KB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-7.53MB/s(Youtube:不良林), server: jp02.henet.cyou, port: 20000, type: vmess, uuid: 63b3575f-a89a-4d01-8a74-bd1523aec4e8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: jp02.henet.cyou}}
-  - {name: 🇸🇬 新加坡-205.1KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.47MB/s(Youtube:不良林), server: 20.123.187.212, port: 27931, type: vmess, uuid: 256eae41-0b8f-4faa-bce8-6366011dc19f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-480.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33004, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.06MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 塞浦路斯-1.13MB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇫🇷 法国-1.51MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇦 加拿大-1.61MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-2.02MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-1.96MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-508.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.53MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-205.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 塞浦路斯-1.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-508.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.53MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-205.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 塞浦路斯-1.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-508.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.53MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-205.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 塞浦路斯-1.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-508.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.53MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-205.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 塞浦路斯-1.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-508.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.53MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-205.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 塞浦路斯-1.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-508.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.53MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-205.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 塞浦路斯-1.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-508.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.53MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-205.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 塞浦路斯-1.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
