--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇺🇸 美国-5.88MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-267.3KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 8fefb1b5-bee7-4736-8e00-cad32ab113d1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇨🇳 中国-11.37MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-508.0KB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 台湾-9.04MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.06MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 塞浦路斯-1.13MB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
-  - {name: 🇫🇷 法国-1.51MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-1.61MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-2.04MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-2.02MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.96MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-2.10MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-1.85MB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-508.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.04MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 塞浦路斯-1.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-508.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.04MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 塞浦路斯-1.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,34 +52,35 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-508.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.04MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 塞浦路斯-1.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-9.04MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-508.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.04MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 塞浦路斯-1.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +88,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-508.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.04MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 塞浦路斯-1.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +104,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-508.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.04MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 塞浦路斯-1.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +129,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-508.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.04MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 塞浦路斯-1.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
 rules:
